--- a/src/Components/TrainingCard/TrainingCard.css
+++ b/src/Components/TrainingCard/TrainingCard.css
@@ -9,9 +9,10 @@
     overflow: hidden;
     color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    cursor: pointer;
 }
 
-img{
+.picture{
     flex: 1;
     margin: 10px;
     background-color: azure;
