--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 .App{
   width: 100%;
   height: 100%;
+  background: #F8FBF1;
+  display: flex;
+  flex-direction: column;
+  color: #42564a;
 }
 html{
   width: 100%;
@@ -9,7 +13,7 @@ html{
 body{
   width: 100%;
   height: 100%;
-  font-family: 'Hanalei Fill', cursive;
+  font-family: 'Roboto', cursive;
 }
 
 #root{
