--- a/src/Components/ModuleCard/ModuleCard.css
+++ b/src/Components/ModuleCard/ModuleCard.css
@@ -1,7 +1,34 @@
 .module_card{
     margin: 10px;
     font-size: 10px;
-    border:  1px solid lightgray;
+    border: 1px solid lightgray;
     border-radius: 10px;
     padding: 10px;
+    background-color: white;
+    height: fit-content;
+    position: relative;
+}
+
+.module_card>img{
+    width: -webkit-fill-available;
+    height: 100px;
+    object-fit: cover;
+}
+
+.module_card_locked>img{
+    width: -webkit-fill-available;
+    height: 100px;
+    object-fit: cover;
+}
+
+.module_card_locked{
+    margin: 10px;
+    font-size: 10px;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: white;
+    height: fit-content;
+    position: relative;
+    filter: blur(3px);
 }
