--- a/src/Components/PricingCard/PricingCard.css
+++ b/src/Components/PricingCard/PricingCard.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-items: center;
     border-radius: 20px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .pricingCard>*{
